Refine PDF export: typographic system, page breaks, and spacing
- Implement print-ready black/white typography with Times serif body
- Enforce strict page breaks for title/introduction/parts/outro/chapters
- Reduce body copy size (11→10pt) and rebalance title hierarchy
- Fix heading detection to prevent stray header text on pages
- Add mirrored margins with generous inner gutter for book binding
- Preserve intentional lineation and white space from manuscript
- Subtle page numbers at bottom outer corners

--- a/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
+++ b/src/book/Part I: The Axis of Becoming/1. The Axis of Consequence.md
@@ -1,7 +1,7 @@
-# **Chapter 1 — The Axis of Consequence**
+# **Chapter 1 – The Axis of Consequence**
 
 You stand now, reading this, at the convergence of everything that shaped you.  
-The **state vector** — the accumulated force, the inherited momentum, the quiet pressures you never noticed — the physical structure beneath this moment.  
+The **state vector** – the accumulated force, the inherited momentum, the quiet pressures you never noticed – the physical structure beneath this moment.  
 Your genetics, your history, your conditioning, every instinct still echoing from the past.
 
 You did not choose these forces, but you carry them.  
@@ -17,10 +17,9 @@ Every moment tightens or loosens the shape of who you’re becoming.
 
 You are not the beginning of yourself.  
 You are not the end.  
-You are the hinge — the place where pressure becomes direction.
+You are the hinge – the place where pressure becomes direction.
 
-This is not spirituality.  
-It is mechanics.
+This is mechanics.
 
 A system continues in its established motion until something strong enough intervenes.  
 History moves the same way.  
@@ -30,8 +29,8 @@ Energy flows through grooves carved long before you noticed them.
 
 Pause for a moment.  
 Feel the breath, the jaw, the chest.  
-This is **bio-telemetry** — the body reporting the forces moving through it.  
-The tightness, the heat, the subtle collapse in posture — none of it is random.  
+This is **bio–telemetry** – the body reporting the forces moving through it.  
+The tightness, the heat, the subtle collapse in posture – none of it is random.  
 It is data.  
 It is the map beneath your intentions.
 
@@ -57,7 +56,7 @@ You are always becoming something.
 The question is whether the becoming is deliberate.
 
 When you see the underlying motion clearly, passivity dissolves.  
-The next step stops feeling like a guess and becomes a **correction** —  
+The next step stops feeling like a guess and becomes a **correction** –  
 a subtle but decisive shift in orientation.
 
 A degree of tilt repeated over months reshapes a life.  
@@ -79,8 +78,8 @@ Then ask:
 
 **Is this the direction I want to continue?**
 
-If yes — deepen the stride.  
-If no — adjust the orientation.
+If yes – deepen the stride.  
+If no – adjust the orientation.
 
 Not violently.  
 Accurately.
@@ -90,7 +89,7 @@ But the moment you see it,
 you are no longer dragged by inherited motion.  
 You are operating from the centre.
 
-This is consequence —  
+This is consequence –  
 not punishment,  
 not reward,  
 but truth in motion.
