--- a/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
+++ b/src/book/Part I: The Axis of Becoming/2. The Shape of Desire.md
@@ -1,26 +1,26 @@
-# **Chapter 2 — The Shape of Desire**
+# **Chapter 2 – The Shape of Desire**
 
 Once you see the direction you’re already moving,  
-another question rises beneath it — quieter in volume, heavier in truth:
+another question rises beneath it – quieter in volume, heavier in truth:
 
 **What is pulling me forward?**
 
 Not the surface cravings.  
 Not the reflexive wants that flare and vanish.  
-The deeper current —  
+The deeper current –  
 the one that returns after distraction, after exhaustion,  
 even after fear.
 
 This current is **desire**,  
 but not the kind we usually name.
 
-Most desires are noise —  
+Most desires are noise –  
 stimulus dressed as purpose,  
 old wounds wearing the mask of ambition,  
 the residue of other people’s expectations.  
 They burn quickly and leave nothing.
 
-Beneath them lies something steadier —  
+Beneath them lies something steadier –  
 a gravitational pull.
 
 In physics, every structure has a natural frequency,  
@@ -30,7 +30,7 @@ Fight it and the resistance turns into heat.
 
 Desire works the same way.
 
-Your deeper self has a frequency —  
+Your deeper self has a frequency –  
 a direction that feels like clarity,  
 even when the path toward it is uncomfortable.  
 You recognise it not by excitement,  
@@ -46,7 +46,7 @@ Ask yourself:
 Desire is not abstract.  
 It behaves like matter.
 
-Like gravity —  
+Like gravity –  
 the inevitable fall,  
 the universal sensation of sitting next to someone larger on a comfortable seat  
 and falling into their weight,  
@@ -71,13 +71,13 @@ The body recognises truth long before the mind does:
 a deeper breath,  
 a jaw released,  
 a chest that opens by a degree.  
-Small signals —  
+Small signals –  
 but unmistakable.
 
 Your system knows when you are moving toward something that fits.
 
 But not every deep pull is truth.  
-Some desires are distortions —  
+Some desires are distortions –  
 the echo of old pain trying to complete itself through achievement, control, or escape.  
 They feel urgent,  
 but they do not feel right.
@@ -92,7 +92,7 @@ True desire does not shrink you.
 It expands the internal space you can stand inside.
 
 It is not fantasy.  
-It is memory —  
+It is memory –  
 the memory of who you were before you started contorting yourself  
 to fit the world around you.
 
