--- a/src/book/Part I: The Axis of Becoming/3. The Weight of Choice.md
+++ b/src/book/Part I: The Axis of Becoming/3. The Weight of Choice.md
@@ -53,8 +53,7 @@ Once momentum builds, the energy required decreases.
 But the ignition always burns.
 
 This is why the first step feels impossible.  
-Not because you lack strength,  
-but because the physics of transformation are real.
+Strength can be present, and still the physics of transformation remains.
 
 And yet, the moment you step –  
 the moment you commit to one future over another –  
