--- a/src/book/Part I: The Axis of Becoming/5. Resistance and the Counterforce of Self.md
+++ b/src/book/Part I: The Axis of Becoming/5. Resistance and the Counterforce of Self.md
@@ -8,8 +8,7 @@ A tightening behind the breath.
 A pull toward the familiar.  
 A quiet instinct insisting that staying the same is safer than stepping forward.
 
-This is not weakness.  
-It is homeostasis – the mind and body stabilising around what they know, even when what they know is limiting.
+This is homeostasis – the mind and body stabilising around what they know, even when what they know is limiting.
 
 Resistance is the weight of your history pressing against your future.
 
@@ -18,6 +17,9 @@ the urge to delay,
 the sudden tiredness,  
 the mind inventing problems it never cared about until now.  
 The familiar becomes seductive precisely because it asks nothing of you.
+
+Resistance appears when force finally reaches structure.  
+What resists is the shape of what already exists.
 
 Look at meditation.  
 The moment you turn inward, the mind rebels.  
@@ -56,13 +58,12 @@ If the force arrives late, it must work harder.
 This is the consequence we rarely name:  
 **the longer you wait, the more energy it takes to move.**
 
-Not because you become weaker,  
-but because the pattern becomes stronger.
+Capacity remains, while the pattern consolidates and strengthens.
 
-Delay is not rest.  
-Delay is reinforcement.
+Delay consolidates the old pattern.  
+Rest restores the system.
 
-And yet this isn’t condemnation – it’s clarity.  
+And this is clarity.  
 When you understand what delay does, you no longer mistake it for safety.  
 You see it as a quiet architect, shaping your future through inaction as surely as choice does through motion.
 
@@ -75,8 +76,7 @@ yet you repeat it.
 You know the work diminishes you,  
 yet you cling to the familiarity it provides.
 
-Not because these things nourish you,  
-but because the activation energy to leave them feels momentarily overwhelming.
+Familiarity holds, and the activation energy to leave feels momentarily overwhelming.
 
 A system remains stable until the energy of transformation exceeds the comfort of the familiar.
 
@@ -90,8 +90,7 @@ Two selves overlapping.
 One clinging.  
 One reaching.
 
-The instability you feel is not a warning –  
-it is a sign that the old structure is beginning to fracture.
+The instability you feel is a sign that the old structure is beginning to fracture.
 
 Meet the resistance directly.  
 Not with force, but with clarity.  
@@ -107,8 +106,7 @@ A new equilibrium forms around the person you are becoming.
 Change has never been difficult because you are incapable.  
 Change is difficult because the architecture of yesterday must be persuaded to release its grip.
 
-Resistance is not failure.  
-It is evidence of movement.  
+Resistance is evidence of movement.  
 It is friction revealing form,  
 pressure revealing direction,  
 the unmistakable signal that you are standing at a threshold.
