--- a/src/book/Part I: The Axis of Becoming/6. Integration and the Returning Self.md
+++ b/src/book/Part I: The Axis of Becoming/6. Integration and the Returning Self.md
@@ -29,8 +29,7 @@ Muscle memory does not disappear; it goes dormant.
 Emotional patterns do not dissolve; they lose their authority.
 
 But under pressure, the old signals fire again.  
-Not because they are in charge –  
-but because they were once necessary.
+They are not in charge; they were once necessary.
 
 A system never deletes its past.  
 It simply stops revolving around it.
@@ -41,8 +40,7 @@ You build a new path.
 You guide it with intention.  
 But when the rains are heavy, the river remembers the channels it once carved and follows them again.
 
-Not because it wishes to return –  
-but because those channels still exist beneath the surface.
+Those channels still exist beneath the surface.
 
 The same happens in you.
 
