--- a/src/book/Part II: The Spiral Path/10. Shedding Mass.md
+++ b/src/book/Part II: The Spiral Path/10. Shedding Mass.md
@@ -63,6 +63,8 @@ You stay, but smaller.
 You survive, but compressed.  
 The orbit tightens until identity erodes.
 
+No orbit can be exited while the system insists on carrying the very weight that keeps it bound.
+
 Both of these approaches rely on force.
 
 One spends it.  
