--- a/src/book/Part II: The Spiral Path/8. Rest, Oscillation, and the Zero Point.md
+++ b/src/book/Part II: The Spiral Path/8. Rest, Oscillation, and the Zero Point.md
@@ -108,6 +108,10 @@ Without oscillation, systems overheat.
 Without pause, signals degrade.  
 Without stillness, motion loses coherence.
 
+Systems that never release tension do not usually break all at once.  
+They lose signal first.  
+Sensitivity dulls, feedback fades, and collapse arrives quietly, long after the system stopped responding.
+
 What looks like discipline becomes compulsion.  
 What feels like momentum becomes drift.
 
