--- a/src/book/Part II: The Spiral Path/9. Other People, Other Gravities.md
+++ b/src/book/Part II: The Spiral Path/9. Other People, Other Gravities.md
@@ -10,8 +10,7 @@ Your attention shifts.
 Your routines rearrange.  
 Your decisions curve.
 
-Not because you are weak.  
-Because gravity is real.
+Gravity is real.
 
 This is the mistake most philosophies make.  
 They speak as if the self moves through an empty universe.  
@@ -44,8 +43,7 @@ You speak differently.
 You hesitate where you once moved cleanly.  
 You accelerate in directions that no longer feel like your own.
 
-This is not loss of self.  
-It is interaction.
+This is interaction.
 
 The danger is not being pulled.  
 The danger is forgetting that you still rotate around your own axis.
@@ -82,8 +80,7 @@ You may find yourself circling the same arguments.
 Revisiting the same emotional terrain.  
 Repeating patterns you believed you had outgrown.
 
-This is not because you are regressing.  
-It is because the field has changed.
+The spiral returns here because the field has changed.
 
 The spiral returns here, but now it is shared.
 
