--- a/src/book/Part III: The Living Axis/12. Falling and Rising Again.md
+++ b/src/book/Part III: The Living Axis/12. Falling and Rising Again.md
@@ -51,18 +51,14 @@ At first, falling feels like regression.
 Like proof that the work did not hold.  
 Like evidence that you were mistaken about your own growth.
 
-But this assumes growth is something you achieve and keep.
-
-It isn’t.
-
-It is something you maintain through adjustment.
+But this assumes growth is something you achieve and keep.  
+Growth is something you maintain through adjustment.
 
 Each fall exposes where weight remains.  
 Where mass was never fully shed.  
 Where old habits, identities, or protections still carry charge.
 
-This is not a mistake.  
-It is information.
+A fall is information.
 
 In learning systems, error is not noise – it is signal.  
 Without it, refinement stalls.  
