--- a/src/book/Part III: The Living Axis/13. Acting Without Guarantees.md
+++ b/src/book/Part III: The Living Axis/13. Acting Without Guarantees.md
@@ -25,8 +25,7 @@ Only ranges.
 
 Reality, at its base, unfolds statistically.
 
-This is not ignorance waiting to be corrected.  
-It is how the system works.
+This is how the system works.
 
 Even with perfect information, outcomes remain uncertain.  
 The future is not hidden.  
@@ -75,8 +74,7 @@ In real systems, stability is provisional.
 It holds only as long as conditions remain within tolerable bounds.  
 When those bounds are crossed, adaptation replaces control.
 
-This is not weakness.  
-It is intelligence.
+Responsiveness is intelligence.
 
 Living systems do not demand certainty.  
 They demand responsiveness.
@@ -87,7 +85,6 @@ You observe.
 
 Then you update.
 
-This is not indecision repeated.  
 It is refinement in motion.
 
 The mistake is thinking that action must be justified by certainty.  
@@ -126,7 +123,6 @@ Not permanently.
 The universe does not reward hesitation with clarity.  
 It responds to contact.
 
-This is not chaos.  
 It is a different kind of order.
 
 One that cannot be controlled from the outside,  
