--- a/src/book/Part III: The Living Axis/15. Nihilism and the Weightless World.md
+++ b/src/book/Part III: The Living Axis/15. Nihilism and the Weightless World.md
@@ -30,6 +30,10 @@ Movement continues, but without gradient.
 Commitment feels exposed.  
 Distance feels safer than depth.
 
+In such conditions, motivation does not fail.  
+Direction does.  
+When gradient disappears, effort loses orientation rather than energy.
+
 This condition is often mistaken for apathy.  
 It is closer to suspension.
 
@@ -60,8 +64,7 @@ Effort feels disconnected from outcome.
 Discipline feels ornamental.  
 Commitment feels increasingly asymmetrical.
 
-This is not a moral failure.  
-It is a structural one.
+The system fails even when intention remains intact, because structure no longer carries the load.
 
 Perspective matters here.
 
@@ -99,8 +102,7 @@ In such conditions, distance becomes efficient.
 Irony becomes protective.  
 Non-attachment feels economical.
 
-These are not failures of character.  
-They are rational responses to environments that no longer reward depth.
+These responses are rational in environments that no longer reward depth.
 
 But weightlessness cannot sustain life indefinitely.
 
