--- a/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
+++ b/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
@@ -9,8 +9,8 @@ To love anything is to introduce asymmetry into the system.
 To care is to allow direction.  
 To bind yourself to something finite is to accept that loss is now possible.
 
-This is not a moral act.  
-It is a physical one.
+Attachment is not primarily moral.  
+It behaves like physics.
 
 Every attachment creates gradient.  
 Every gradient reintroduces motion.
@@ -36,8 +36,7 @@ One that cannot be replaced without consequence.
 
 Only finite systems generate meaning.
 
-This is not a romantic claim.  
-It is structural.
+This is a structural claim.
 
 In physics, systems that cannot lose energy cannot change state.  
 In life, systems that cannot be lost cannot be valued.
@@ -61,8 +60,7 @@ It completes it.
 What breaks is not the attachment,  
 but the illusion that permanence was required.
 
-Grief is not evidence that love failed.  
-It is proof that it functioned.
+Grief is evidence that love functioned.
 
 The mistake is to treat loss as something to be avoided,  
 rather than as the cost of coherence.
@@ -93,10 +91,7 @@ It returns through commitment.
 Not commitment to outcomes,  
 but to orientation under uncertainty.
 
-The system moves again.
-
-Not because it is safe,  
-but because it is now weighted.
+The system moves again, weighted enough to produce direction.
 
 And with weight comes direction.
 
