--- a/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
+++ b/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
@@ -15,8 +15,7 @@ This is where identity is tested.
 Not in moments of decision,  
 but in duration.
 
-Most systems fail not because the force was too great,  
-but because it was applied consistently.
+Most systems fail under force that is applied consistently.
 
 In physics, structures are rarely destroyed by impact.  
 They fail through fatigue.  
@@ -25,9 +24,7 @@ eventually exceed tolerance.
 
 Human systems behave the same way.
 
-What feels like burnout is often misidentified.  
-It is not exhaustion from effort,  
-but deformation from incoherence.
+What feels like burnout is often deformation from incoherence, not exhaustion from effort.
 
 When who you are  
 and how you are required to move  
@@ -48,8 +45,7 @@ You cannot endure.
 
 The middle matters here.
 
-To be in the middle is not to reduce pressure,  
-but to orient correctly under it.
+To be in the middle is to orient correctly under pressure.
 
 When forces act through the centre,  
 load becomes bearable.  
