--- a/src/book/Part IV: The Horizon Beyond/18. Decay, Adaptation, and the Will to Remain.md
+++ b/src/book/Part IV: The Horizon Beyond/18. Decay, Adaptation, and the Will to Remain.md
@@ -4,8 +4,7 @@ No system endures unchanged.
 
 What survives does so by letting parts of itself fall away.
 
-This is not failure.  
-It is maintenance.
+This is maintenance.
 
 In nature, decay is not the opposite of life.  
 It is the mechanism by which life continues.  
@@ -38,16 +37,13 @@ accumulate stress until they fracture.
 In life, identities that cannot release obsolete roles  
 eventually collapse under their own weight.
 
-Adaptation is not reinvention.  
-It is subtraction.
+Adaptation is subtraction.
 
 The middle plays a precise role here.
 
-To remain centred does not mean remaining unchanged.  
-It means allowing change to occur  
+To remain centred is to allow change to occur  
 without losing orientation.
 
-You are not asked to abandon yourself.  
 You are asked to update.
 
 Decay, when allowed, reduces load.  
@@ -87,8 +83,7 @@ It regulates it.
 It allows what must end to end  
 so that what remains can endure.
 
-This is not resignation.  
-It is intelligence.
+This is intelligence.
 
 And it is how life continues  
 without losing its centre.
