--- a/src/book/Part IV: The Horizon Beyond/20. Coherence in Motion.md
+++ b/src/book/Part IV: The Horizon Beyond/20. Coherence in Motion.md
@@ -14,7 +14,6 @@ This is why life rarely feels resolved.
 A system in motion is never static long enough to feel complete.  
 Stability, when it appears, is temporary – a momentary balance of forces, not an endpoint.
 
-This is not a flaw in the design.  
 It *is* the design.
 
 In complex systems, coherence does not mean stillness.  
@@ -23,8 +22,7 @@ It means coordination.
 Many people mistake peace for the absence of tension.  
 In reality, peace is tension distributed cleanly through the structure.
 
-The middle is not a place you arrive at.  
-It is the orientation that allows multiple forces to pass through you  
+The middle is the orientation that allows multiple forces to pass through you  
 without tearing you apart.
 
 Love pulls.  
@@ -48,8 +46,7 @@ Understanding the system does not exempt you from its mechanics.
 
 But it does allow you to move *with* them.
 
-To be in the middle is not to control the forces acting on you.  
-It is to remain oriented as they change.
+To be in the middle is to remain oriented as forces change.
 
 You will still feel pulled.  
 You will still shed.  
@@ -68,8 +65,7 @@ does not need to be resolved.
 
 It only needs to remain intact.
 
-This is not mastery.  
-It is maintenance.
+This is maintenance.
 
 And maintenance, applied consistently,  
 is how complex systems endure.
