--- a/src/book/Part IV: The Horizon Beyond/21. Finitude and the Shape of Time.md
+++ b/src/book/Part IV: The Horizon Beyond/21. Finitude and the Shape of Time.md
@@ -2,7 +2,6 @@
 
 Everything that has weight is finite.
 
-This is not a limitation imposed on life.  
 It is the condition that gives life shape.
 
 Without finitude, nothing differentiates.  
@@ -26,6 +25,9 @@ Because time is limited, choice matters.
 Because energy is finite, attention becomes selective.  
 Because bodies fail, priorities clarify.
 
+Time does not make things meaningful by ending them, but by forcing choice.  
+What cannot be postponed forever must finally be prioritised.
+
 Mortality is not an interruption to meaning.  
 It is the force that concentrates it.
 
@@ -38,10 +40,7 @@ It needs orientation.
 
 The middle plays a decisive role here.
 
-To be in the middle is not to deny mortality,  
-nor to be consumed by it.
-
-It is to allow the knowledge of an ending  
+To be in the middle is to allow the knowledge of an ending  
 to inform how weight is distributed now.
 
 When time is ignored, life becomes diffuse.  
@@ -82,6 +81,4 @@ And a life that accepts its limit
 can move through time  
 without being scattered by it.
 
-This is not resignation.
-
-It is shape.
+This is shape.
