--- a/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
+++ b/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
@@ -3,106 +3,52 @@
 A unified theory is only useful if it can be carried.
 
 Not as belief,  
-but as a small set of rules that remain true under pressure.
+but as something that remains true under pressure.
 
 What follows is not a summary.  
-It is a collection of corollaries – the practical shape of the middle, stated cleanly.
+It is an attempt to speak plainly about what holds when living systems are compressed by time, by circumstance, by the weight of consequence.
 
-## **1. When the world feels meaningless, look for gradient**
 Meaning does not vanish first.  
 Gradient does.
 
 When effort no longer maps to outcome, orientation collapses.  
-This is not personal failure.  
-It is the system flattening.
+Not as personal failure, but as flattening: motion without traction, activity without direction.  
+When gradient returns, meaning returns the same way gravity does–not as a slogan, but as the felt pull of consequence.
 
-Restore gradient and meaning begins to return.  
-Not as an idea, but as motion.
-
-## **2. When you feel pulled apart, look for off-axis force**
-Force through the centre is load.  
-Force off-centre becomes torque.
-
-Most inner fracture is not caused by too much pressure,  
-but by pressure passing through misalignment.
-
-Reduce torque and the same force becomes bearable.
-
-## **3. When you are exhausted, ask whether you are carrying unnecessary mass**
-Mass is significance.  
-Stories that no longer serve you.  
-Identity held too tightly.  
-Outcomes made too heavy.
-
-Shedding mass does not remove you from life.  
-It changes how life acts upon you.
-
-## **4. When you keep returning to the same pattern, measure the spiral**
-The return is not always regression.  
-It is often training under real conditions.
-
-The question is not whether the loop repeats.  
-The question is whether your position within it has changed.
-
+The return to old patterns works like this too.  
+Repetition is not always regression; it can be training under real conditions, where the loop repeats but your position inside it shifts.  
 Less urgency.  
 More margin.  
 More coherence under the same trigger.
 
-## **5. When something ends, treat it as information before you treat it as judgement**
-Loss does not only remove.  
-It reveals.
+Exhaustion often has less to do with capacity than with what is being carried.  
+Mass, in human systems, is significance: stories that no longer serve, identity held too tightly, outcomes made too heavy.  
+Shedding that weight does not remove you from life; it changes how life acts upon you.
 
-It clarifies what was actually weighted.  
-It exposes what was held by illusion.  
-It shows where energy was misallocated.
-
+Endings do something similar.  
+Loss does not only remove; it reveals.  
+It clarifies what was actually weighted, what was held by illusion, where energy was misallocated.  
 Grief is not the system breaking.  
 It is the system registering consequence.
 
-## **6. When a part of you decays, check whether it is maintenance**
-Systems stay alive by releasing what no longer fits their environment.
+And some forms of decay are not collapse at all.  
+Living systems stay alive by releasing what no longer fits their environment.  
+What looks like disintegration from the outside is sometimes maintenance from within–an update written in subtraction.
 
-Decay is not always collapse.  
-Often it is update.
+People try to escape tightening orbits by adding speed.  
+Escape velocity is expensive; it burns fuel and leaves damage.  
+So they try the opposite and call it peace, when it is often only a slow loss of motion.  
+Either way, the orbit holds if the weight that binds it is kept intact.
 
-The question is not “what am I losing?”  
-It is “what load am I no longer designed to carry?”
+Coherence is rarer than certainty and more available.  
+It is the ability to remain intact while changing state: orientation under force, maintenance under time, clarity under constraint.  
+When coherence is present, pressure does not disappear, but it stops tearing the system into parts.
 
-## **7. When you want to escape, ask whether speed is being used to avoid weight**
-Escape velocity is expensive.  
-It burns fuel.
+There is a mechanical truth underneath this, simple enough to recognise and hard enough to forget:
 
-Sometimes the better move is not to run,  
-but to reduce what makes you so easy to hold.
+Failure is not determined by how much force a system encounters, but by how that force is aligned.  
+When pressure passes through the centre, it becomes load and can be carried.  
+When it acts at a distance from the axis, it becomes torque and fractures the structure over time.
 
-Not everything requires leaving.  
-Many things require lightening.
-
-## **8. When you want certainty, choose coherence instead**
-Certainty is rare in living systems.  
-Coherence is available.
-
-Coherence is the ability to remain intact while changing state.  
-It is orientation under force,  
-maintenance under time,  
-and clarity under constraint.
-
-## **9. When you feel scattered, return to the centre by making one clean choice**
-The middle is not found by thinking.  
-It is restored by alignment.
-
-One decision that reduces torque.  
-One action that restores gradient.  
-One commitment that is proportional to what you can actually carry.
-
-## **10. When you forget everything else, remember the law**
-Your inner life and the world around you follow the same rules.  
-In a dualistic system, opposing forces shape motion, meaning, and change.
-
-The middle is the invariant.  
-Not the absence of force,  
-but the orientation that allows force to pass through you without erasing you.
-
-That is what it means to remain.
-
-In the middle of all things.
+Endurance is therefore not a matter of strength, but of orientation.  
+Alignment converts destabilising force into something that can be borne.
