--- a/src/book/introduction/0. Introduction: A Centre That Moves.md
+++ b/src/book/introduction/0. Introduction: A Centre That Moves.md
@@ -1,8 +1,8 @@
-# **Introduction — A Centre That Moves**
+# **Introduction – A Centre That Moves**
 
 This is not a book of answers.  
 Answers are endpoints, and you are not at an end.  
-You are in motion — always — even when you feel still.
+You are in motion – always – even when you feel still.
 
 This is a book of **orientation**.  
 A way of seeing from the inside out.  
@@ -24,20 +24,20 @@ Options reappear.
 You become capable of directing your life instead of reacting to it.
 
 Physics mirrors this.  
-Every dynamic system has a point of equilibrium — a centre where noise falls away and the underlying pattern becomes visible.  
+Every dynamic system has a point of equilibrium – a centre where noise falls away and the underlying pattern becomes visible.  
 The equations don’t change at the centre.  
 *You* do.  
 Distortion fades.  
 Structure emerges.
 
 Philosophy has always circled this same truth.  
-The Stoics called it the **hegemonikon** — the governing seat within the self.  
+The Stoics called it the **hegemonikon** – the governing seat within the self.  
 Taoist thought frames it as the unforced axis.  
 Advaita describes it as the witness behind the actor.  
 All of them point toward a single idea:  
 **there is a place within you untouched by the storm, and it is from that place you see clearly.**
 
-This book is an attempt to reach that place —  
+This book is an attempt to reach that place –  
 not through stillness alone,  
 not through effort alone,  
 but through a union of experience, physics, psychology, and meaning.
@@ -50,7 +50,7 @@ Before you continue, arrive properly.
 
 Lower the shoulders.  
 Let your breath settle.  
-Not softly — accurately.  
+Not softly – accurately.  
 Enough to feel the difference between tension and readiness.  
 Enough to return to the part of you that responds instead of reacts.
 
@@ -62,7 +62,7 @@ It matters.
 Your internal conditions shape what you can absorb,  
 just as environmental conditions shape how a structure takes weight.
 
-This is the work —  
+This is the work –  
 not performance,  
 not idealism,  
 but simple awareness of the forces acting within you.
@@ -77,12 +77,12 @@ Do not rush to the next line as if you are trying to finish something.
 The point is not to finish.  
 The point is to **turn**.
 
-And when you’re ready, begin —  
+And when you’re ready, begin –  
 not as a seeker of answers,  
 but as someone learning to stand at the centre of their own life.
 
 This is the entry point.  
 Not effort.  
 **Orientation.**  
-A centre that moves —  
+A centre that moves –  
 and learns to carry itself through the world.
