--- a/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
+++ b/src/book/Part III: The Living Axis/16. Love, Loss, and Finite Systems.md
@@ -1,9 +1,6 @@
 # **Chapter 16 – Love, Loss, and Finite Systems**
 
-Weight returns through attachment.
-
-Not because attachment is safe,  
-but because it is consequential.
+Weight returns through attachment because it is consequential.
 
 To love anything is to introduce asymmetry into the system.  
 To care is to allow direction.  
@@ -72,8 +69,7 @@ A system that allows loss refines itself through consequence.
 
 This is where the middle is tested.
 
-To be in the middle is not to avoid attachment,  
-nor to collapse into it.
+To be in the middle is to remain oriented within attachment.
 
 It is to remain oriented  
 while allowing gravity to act.
@@ -88,14 +84,11 @@ without fragmentation.
 This is why meaning does not return through certainty.  
 It returns through commitment.
 
-Not commitment to outcomes,  
-but to orientation under uncertainty.
+Commitment shifts from outcomes to orientation under uncertainty.
 
 The system moves again, weighted enough to produce direction.
 
 And with weight comes direction.
 
-Not guaranteed.  
-Not permanent.
-
-But real.
+Real.  
+Without guarantees or permanence.
