--- a/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
+++ b/src/book/Part III: The Living Axis/17. Integrity Under Pressure.md
@@ -1,19 +1,13 @@
 # **Chapter 17 – Integrity Under Pressure**
 
-Once weight returns, pressure follows.
-
-Not as crisis,  
-but as persistence.
+Once weight returns, pressure follows as persistence.
 
 Every force that introduces meaning also introduces strain.  
 Attachment pulls over time.  
 Commitment accumulates load.  
 Responsibility does not spike – it settles.
 
-This is where identity is tested.
-
-Not in moments of decision,  
-but in duration.
+This is where identity is tested: by duration.
 
 Most systems fail under force that is applied consistently.
 
