--- a/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
+++ b/src/book/Part IV: The Horizon Beyond/23. Corollaries of the Middle.md
@@ -1,19 +1,14 @@
 # **Chapter 23 – Corollaries of the Middle**
 
-A unified theory is only useful if it can be carried.
+A unified theory is only useful if it can be carried – a small set of rules that remain true under pressure.
 
-Not as belief,  
-but as something that remains true under pressure.
-
-What follows is not a summary.  
-It is an attempt to speak plainly about what holds when living systems are compressed by time, by circumstance, by the weight of consequence.
+What follows is a collection of corollaries – the practical shape of the middle, stated cleanly.
 
 Meaning does not vanish first.  
 Gradient does.
 
-When effort no longer maps to outcome, orientation collapses.  
-Not as personal failure, but as flattening: motion without traction, activity without direction.  
-When gradient returns, meaning returns the same way gravity does–not as a slogan, but as the felt pull of consequence.
+When effort no longer maps to outcome, orientation collapses through flattening: motion without traction, activity without direction.  
+Restore gradient and meaning begins to return through motion—the felt pull of consequence.
 
 The return to old patterns works like this too.  
 Repetition is not always regression; it can be training under real conditions, where the loop repeats but your position inside it shifts.  
@@ -26,10 +21,9 @@ Mass, in human systems, is significance: stories that no longer serve, identity 
 Shedding that weight does not remove you from life; it changes how life acts upon you.
 
 Endings do something similar.  
-Loss does not only remove; it reveals.  
+Loss removes and reveals.  
 It clarifies what was actually weighted, what was held by illusion, where energy was misallocated.  
-Grief is not the system breaking.  
-It is the system registering consequence.
+Grief is the system registering consequence, not the system breaking.
 
 And some forms of decay are not collapse at all.  
 Living systems stay alive by releasing what no longer fits their environment.  
