--- a/src/book/introduction/0. Introduction: A Centre That Moves.md
+++ b/src/book/introduction/0. Introduction: A Centre That Moves.md
@@ -1,8 +1,7 @@
 # **Introduction – A Centre That Moves**
 
-This is not a book of answers.  
-Answers are endpoints, and you are not at an end.  
-You are in motion – always – even when you feel still.
+This book offers orientation rather than answers.  
+Answers are endpoints, and you are in motion – always – even when you feel still.
 
 This is a book of **orientation**.  
 A way of seeing from the inside out.  
@@ -37,10 +36,7 @@ Advaita describes it as the witness behind the actor.
 All of them point toward a single idea:  
 **there is a place within you untouched by the storm, and it is from that place you see clearly.**
 
-This book is an attempt to reach that place –  
-not through stillness alone,  
-not through effort alone,  
-but through a union of experience, physics, psychology, and meaning.
+This book is an attempt to reach that place through a union of stillness and effort – through experience, physics, psychology, and meaning.
 
 You will not read this book.  
 You will meet it.  
@@ -49,8 +45,10 @@ And if you let it, it will meet you back.
 Before you continue, arrive properly.
 
 Lower the shoulders.  
-Let your breath settle.  
-Not softly – accurately.  
+Let your breath settle.
+
+Accurately.  
+Soft enough to settle, precise enough to tell the truth.  
 Enough to feel the difference between tension and readiness.  
 Enough to return to the part of you that responds instead of reacts.
 
@@ -62,27 +60,17 @@ It matters.
 Your internal conditions shape what you can absorb,  
 just as environmental conditions shape how a structure takes weight.
 
-This is the work –  
-not performance,  
-not idealism,  
-but simple awareness of the forces acting within you.
+This is the work – awareness of the forces acting within you, without theatre and without fantasy.
 
-Pause between the words.  
-Not to make the reading slower,  
-but to make it real.
+Pause between the words and let the reading become real.
 
 Reflect.  
 Let the insights strike where they must.  
-Do not rush to the next line as if you are trying to finish something.  
-The point is not to finish.  
-The point is to **turn**.
+Take the next line only when the current one has landed.  
+This is a turning point, not a finish line.
 
-And when you’re ready, begin –  
-not as a seeker of answers,  
-but as someone learning to stand at the centre of their own life.
+And when you’re ready, begin as someone learning to stand at the centre of their own life.
 
-This is the entry point.  
-Not effort.  
-**Orientation.**  
+This is the entry point: **orientation**.  
 A centre that moves –  
 and learns to carry itself through the world.
